# soryq

./: .gitignore  AGENT_ORCHESTRATION_PLAN.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ai-researcher-report-2026-05-28-voice-prompt-refinement.md  index.html  package-lock.json  package.json  pilot.html  soryq_elevation_analysis.md  soryq_go_mainstream.md  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.js  vitest.config.ts
.claude/: settings.local.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
.kilo/plans/: 1779474199494-shiny-sailor.md
docs/: BUILDING.md  FEATURES.md  SECURITY.md  command-center-architecture.md  market-research-2026.md  redesign-mockup-calm.html  redesign-mockup-canvas-nav.html  redesign-mockup-canvas.html  redesign-mockup-editor.html  redesign-mockup-flow.html  redesign-mockup-spaces.html  redesign-mockup-tiles.html  redesign-mockup.html  redesign-spec.md
docs/superpowers/plans/: 2026-06-04-soryq-orchestrator-worktree-review-plan.md
docs/superpowers/specs/: 2026-06-04-soryq-agent-orchestrator-architecture.md  2026-06-04-soryq-orchestrator-worktree-review-design.md
scripts/: sync-version.js
site/: .gitignore  CHANGELOG.md  README.md  astro.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs
site/public/downloads/: README.txt
site/public/media/: README.txt
site/scripts/: sync-changelog.mjs
site/src/: changelog.ts  config.ts
site/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
site/src/app/changelog/: page.tsx
site/src/app/privacy/: page.tsx
site/src/app/terms/: page.tsx
site/src/components/: CTA.astro  CTA.tsx  Comparison.astro  Comparison.tsx  Demo.astro  Demo.tsx  Download.astro  Download.tsx  Features.astro  Features.tsx  Footer.astro  Footer.tsx  Hero.astro  Hero.tsx  Nav.astro  Nav.tsx  Pricing.astro  Pricing.tsx  Screenshots.astro  Screenshots.tsx  SiteEffects.tsx  Stats.astro  Stats.tsx
site/src/layouts/: Layout.astro
site/src/lib/: changelog.ts  config.ts
site/src/pages/: changelog.astro  index.astro  privacy.astro  terms.astro
site/src/styles/: global.css
src/: App.svelte  App.tsx  app.d.ts  main.js  main.ts  main.tsx  pilot.tsx
src-tauri/: Cargo.toml  cargo_output.txt  cargo_output_utf8.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: app_flags.rs  background.rs  db.rs  env_vars.rs  file_system.rs  github.rs  http.rs  lsp.rs  mobile.rs  mod.rs  models.rs  notification.rs  preview.rs  search.rs  secrets.rs  terminal.rs  theme.rs  workspace.rs
src-tauri/src/error/: mod.rs
src-tauri/src/lsp/: bridge.rs  mod.rs  registry.rs  server.rs
src-tauri/src/preview/: mod.rs
src-tauri/src/pty/: manager.rs  mod.rs  session.rs  shell.rs
src-tauri/src/theme/: loader.rs  mod.rs  models.rs  registry.rs
src-tauri/src/workspace/: manager.rs  mod.rs  project.rs
src/lib/: global.d.ts
src/lib/actions/: clampHorizontalScroll.ts
src/lib/components/containers/: ContainersPanel.css  ContainersPanel.svelte  ContainersPanel.tsx  (+2 more)
src/lib/react/: ReactErrorBoundary.tsx  migrationFallback.css  useAction.ts  useGlobalTooltips.ts  useStore.ts
src/lib/services/: agent-access.test.ts  agent-access.ts  ai-keychain.ts  app-flags.ts  changelog.ts  github.ts  kokoro-local.test.ts  kokoro-local.ts  kokoro-vocab.ts  openrouter-keychain.ts  orchestrator-brain.test.ts  orchestrator-brain.ts  parakeet-local.test.ts  parakeet-local.ts  pty-bridge.ts  tts.test.ts  tts.ts  voice-input.test.ts  voice-input.ts  voice-refinement.test.ts  voice-refinement.ts
src/lib/stores/: background.ts  commandpalette.ts  customAgents.test.ts  customAgents.ts  dailyNote.ts  devpet.ts  editor.test.ts  editor.ts  explorer.ts  gitBranch.ts  http.ts  layout.ts  layoutControl.ts  mobilePanels.ts  navigation.ts  notes.ts  notification.test.ts  notification.ts  orchestrator.test.ts  orchestrator.ts  permissions.ts  presetThemes.ts  preview.test.ts  preview.ts  previewHistory.ts  projectsearch.ts  runHistory.ts  runs.ts  settings.test.ts  settings.ts  sketch.ts  snapshot.ts  snippets.ts  storeCompat.ts  tasks.test.ts  tasks.ts  terminal.test.ts  terminal.ts  theme.ts  updater.test.ts  (+3 more)
src/lib/types/: editor.ts  explorer.ts  layout.ts  terminal.ts  theme.ts  workspace.ts
src/lib/utils/: formatter.ts  proxy-url.test.ts  proxy-url.ts  roughSketch.ts  storage.ts  youtubeApi.ts
src/styles/: global.css
src/styles/themes/: base.css
website/: app.js  index.html  style.css
(+245 files in other folders)
