[package]
name = "forge"
version = "0.1.0"
description = "A lightweight developer workspace built with Tauri 2, Rust, and Svelte 5"
authors = ["samue"]
edition = "2021"

[lib]
name = "forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
dashmap = "5"
notify = "6"
portable-pty = "0.8"
axum = { version = "0.8.9", features = ["ws"] }
reqwest = { version = "0.13.3", features = ["json", "stream", "gzip", "brotli"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
url = "2"
