[package]
name = "soryq"
version = "0.1.2"
description = "A lightweight developer workspace built with Tauri 2, Rust, and Svelte 5"
authors = ["samue"]
edition = "2021"

[lib]
name = "soryq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
tokio = { version = "1", features = ["full"] }
dashmap = "5"
notify = "6"
image = { version = "0.25", default-features = false, features = ["png"] }
portable-pty = "0.8"
axum = { version = "0.8.9", features = ["ws"] }
reqwest = { version = "0.13.3", features = ["json", "stream", "gzip", "brotli"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
url = "2"
keyring = "3"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }
