[package]
name = "soryq"
version = "0.4.4"
description = "A lightweight developer workspace built with Tauri 2, Rust, and React"
authors = ["samue"]
edition = "2021"
license = "UNLICENSED"

[lib]
name = "soryq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "image-png"] }
window-vibrancy = "0.5"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
tokio = { version = "1", features = ["full"] }
dashmap = "5"
notify = "6"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
portable-pty = "0.8"
axum = { version = "0.8.9", features = ["ws"] }
reqwest = { version = "0.13.3", features = ["json", "stream", "gzip", "brotli"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
url = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
ignore = "0.4"
regex = "1"
# whisper-rs = "0.14"


[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSBitmapImageRep", "NSImage", "NSImageRep"] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = ["objc2", "std"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSData", "NSDictionary", "NSError", "NSGeometry", "NSObject", "NSValue"] }
objc2-web-kit = { version = "0.3.2", default-features = false, features = ["block2", "objc2-app-kit", "objc2-core-foundation", "WKSnapshotConfiguration", "WKWebView"] }

[target.'cfg(target_os = "linux")'.dependencies]
cairo-rs = { version = "0.18.5", features = ["png"] }
webkit2gtk = "2.0.2"

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7.2"
webview2-com = "0.38.2"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Memory",
] }
